# Podfler

./: .gitignore  CMakeLists.txt  Podfler.ino  README.md
PlantWatcher/: .gitignore  CMakeLists.txt  PlantWatcher.ino  Schema Arduino Mega 2560.fzz
PlantWatcher/src/: PlantSensors.cpp  PlantSensors.h  main.cpp  main.h
PodflerAndroid/app/: build.gradle  proguard-rules.pro
PodflerAndroid/app/src/androidTest/java/com/benjaminpiouffle/podfler/: ApplicationTest.java
PodflerAndroid/app/src/main/: AndroidManifest.xml
PodflerAndroid/app/src/main/java/com/benjaminpiouffle/podfler/: AddPlantActivity.java  MainActivity.java  PlantWatcher.java  PlantWatcherAdapter.java  PlantWatchersManager.java
PodflerAndroid/app/src/main/res/drawable/: background.xml
PodflerAndroid/app/src/main/res/layout/: activity_main.xml  add_plant.xml  app_bar_main.xml  content_main.xml  first_launch.xml  nav_header_main.xml
PodflerAndroid/app/src/main/res/menu/: activity_main_drawer.xml  main.xml
PodflerAndroid/app/src/main/res/values/: strings.xml
PodflerAndroid/app/src/test/java/com/benjaminpiouffle/podfler/: ExampleUnitTest.java
